--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
 {
-    "start_url": "/AN-EN-Tags/index.html",
-    "display": "standalone",
-  }
+  "start_url": "/AN-EN-Tags/index.html",
+  "display": "standalone"
+}
